new feature, test, docs, chore: 🌟✅📝🔧 🌟 Updated services and repositories ✅🔧 Docker-Test yml-files, sql files for h2-DB and adjusted build.gradle.kts 📝 Mermaid adjusted and Plant-UML added as a variation (less buggy)